<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layoutDirection="rtl"

    android:background="@drawable/bg_login">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:padding="35dp"
            android:background="@color/cover_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/detail"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:background="@drawable/border_shadow"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15dp" />


                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    />


                <TextView
                    android:id="@+id/meli"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    />


                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    />



                <TextView
                    android:id="@+id/single_mariage"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />



                <TextView
                    android:id="@+id/male_female"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />



                <TextView
                    android:id="@+id/job"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />


                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />


                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />



                <Button
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/message_bg"
                    android:text="@string/call"/>



            </LinearLayout>




            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:padding="20dp"

                android:background="@drawable/border_shadow"
                android:layout_height="wrap_content">



                <EditText
                    android:id="@+id/title_message"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_message"/>



                <EditText
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical" />




                <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/send"/>

            </LinearLayout>
















            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:background="@drawable/border_shadow"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/why"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    />


                <TextView
                    android:id="@+id/q1"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />



                <TextView
                    android:id="@+id/q2"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />


                <TextView
                    android:id="@+id/q3"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />


            </LinearLayout>





            <Button
                android:id="@+id/lab"
                android:text="@string/take_lab"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />




            <Button
                android:id="@+id/remove"
                android:text="@string/remove"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />





            <Button
                android:id="@+id/report_lab"
                android:text="@string/report_lab"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
